--- a/AzureIt.Shared/App.xaml
+++ b/AzureIt.Shared/App.xaml
@@ -1,7 +1,8 @@
-﻿<Application
+﻿<prism:MvvmAppBase
+    xmlns:prism="using:Microsoft.Practices.Prism.Mvvm"
     x:Class="AzureIt.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AzureIt">
 
-</Application>
+</prism:MvvmAppBase>
